--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -51,5 +51,5 @@ jobs:
         user: ${{secrets.unicom_user}}
         password: ${{secrets.unicom_password}}
         appid: ${{secrets.unicom_appid}}
-      run: node index.js unicom --user=${user} --password=${password} --appid=${appid}
+      run: node index.js unicom --user 13023372336 --password 115227 --appid  64cdd06dbf1ba0c9db682c64ebcf3ec773d2a2f018faea8eecd84ca497926c362739e8008a383758c1fd5b5fcf311dd026efbffdd57fc7a68417b802be42a37cbd0360d7b45c6b373079329c1e187f44
 
